# midas_event_unpacker_plugin

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/: LinkDef.h
include/analysis_pipeline/midas_event_unpacker/stages/: midas_event_to_byte_stream_stage.h  midas_event_to_json_stage.h  midas_event_unpacker_stage.h
include/stages/unpacking/: base_midas_event_unpacker_stage.h  midas_event_to_byte_stream_stage.h  midas_event_to_json_stage.h  midas_event_unpacker_stage.h  minimal_midas_event_unpacker_stage.h  project_base_midas_unpacker_stage.h
scripts/: build.sh
src/analysis_pipeline/midas_event_unpacker/stages/: midas_event_to_byte_stream_stage.cpp  midas_event_to_json_stage.cpp  midas_event_unpacker_stage.cpp
src/stages/unpacking/: base_midas_event_unpacker_stage.cpp  midas_event_to_byte_stream_stage.cpp  midas_event_to_json_stage.cpp  midas_event_unpacker_stage.cpp  minimal_midas_event_unpacker_stage.cpp  project_base_midas_unpacker_stage.cpp
